make the whole pipeline work

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -1,7 +1,6 @@
 {
         "collectors": [
-                      "Test",
-                      "CPU"
+                      "Test"
         ],
         "handlers": [
                     "SignalFx",
