change how configuration is handled

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -2,8 +2,15 @@
         "collectors": [
                       "Test"
         ],
-        "handlers": [
-                    "SignalFx",
-                    "Graphite"
-        ]
+        "handlers": {
+            "SignalFx": {
+                "authToken": "token"
+            },
+            "Graphite": {}
+        },
+        "prefix": "test",
+        "default_dimensions": {
+            "first_dim": "first_value",
+            "second_dim": "second_value"
+        }
 }
