--- a/fullerite.conf
+++ b/fullerite.conf
@@ -4,13 +4,13 @@
         ],
         "handlers": {
             "SignalFx": {
-                "authToken": "token"
+                "authToken": "token",
+                "endpoint": "http://somethingsomething.com/blah"
             },
             "Graphite": {}
         },
         "prefix": "test",
-        "default_dimensions": {
-            "first_dim": "first_value",
-            "second_dim": "second_value"
+        "defaultDimensions": {
+            "application": "fullerite",
         }
 }
