fix json config

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -1,16 +1,16 @@
 {
-        "collectors": [
-                      "Test"
-        ],
-        "handlers": {
-            "SignalFx": {
-                "authToken": "token",
-                "endpoint": "http://somethingsomething.com/blah"
-            },
-            "Graphite": {}
+    "collectors": [
+        "Test"
+    ],
+    "handlers": {
+        "SignalFx": {
+            "authToken": "token",
+            "endpoint": "http://somethingsomething.com/blah"
         },
-        "prefix": "test",
-        "defaultDimensions": {
-            "application": "fullerite",
-        }
+        "Graphite": {}
+    },
+    "prefix": "test",
+    "defaultDimensions": {
+        "application": "fullerite"
+    }
 }
