get the defaults and prefix working

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -9,7 +9,7 @@
         },
         "Graphite": {}
     },
-    "prefix": "test",
+    "prefix": "test.",
     "defaultDimensions": {
         "application": "fullerite"
     }
