add in the interval config

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -5,7 +5,8 @@
     "handlers": {
         "SignalFx": {
             "authToken": "token",
-            "endpoint": "http://somethingsomething.com/blah"
+            "endpoint": "http://somethingsomething.com/blah",
+            "interval": "10.0"
         },
         "Graphite": {}
     },
