make the interval configured by default

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -11,6 +11,7 @@
         "Graphite": {}
     },
     "prefix": "test.",
+    "interval": 10.0,
     "defaultDimensions": {
         "application": "fullerite"
     }
