get the config and collectors working

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -1,12 +1,17 @@
 {
-    "collectors": [
-        "Test"
-    ],
+    "collectors": {
+        "Test": {
+            "metricName": "TestMetric"
+        },
+        "Diamond":{
+            "launchScript": "/var/something/cool",
+            "port": "19191"
+        }
+    },
     "handlers": {
         "SignalFx": {
             "authToken": "token",
-            "endpoint": "http://somethingsomething.com/blah",
-            "interval": "10.0"
+            "endpoint": "https://ingest.signalfx.com/v2/datapoint"
         },
         "Graphite": {}
     },
