--- a/fullerite.conf
+++ b/fullerite.conf
@@ -1,6 +1,11 @@
 {
+    "diamond_collectors_path": "/home/bmetin/repos/fullerite/src/diamond/collectors",
+    "diamond_collectors" : {
+        "CPUCollector" : {"enabled": true}
+    },
     "collectors": [
-        "Test"
+        "Test",
+        "Diamond"
     ],
     "handlers": {
         "SignalFx": {
