fix diamond collector configs

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -1,7 +1,8 @@
 {
-    "diamond_collectors_path": "/home/bmetin/repos/fullerite/src/diamond/collectors",
+    "diamond_collectors_path": "src/diamond/collectors",
     "diamond_collectors" : {
-        "CPUCollector" : {"enabled": true}
+        "CPUCollector": {"enabled": true, "interval": 10},
+        "PingCollector": {"enabled": true, "target_google": "google.com", "interval": 10, "bin": "/sbin/ping"}
     },
     "collectors": [
         "Test",
