--- a/fullerite.conf
+++ b/fullerite.conf
@@ -9,12 +9,12 @@
         "Diamond"
     ],
     "handlers": {
+        "Graphite": {},
         "SignalFx": {
             "authToken": "token",
             "endpoint": "http://somethingsomething.com/blah",
             "interval": "10.0"
-        },
-        "Graphite": {}
+        }
     },
     "prefix": "test.",
     "interval": 10,
