--- a/fullerite.conf
+++ b/fullerite.conf
@@ -2,7 +2,7 @@
     "diamond_collectors_path": "src/diamond/collectors",
     "diamond_collectors" : {
         "CPUCollector": {"enabled": true, "interval": 10},
-        "PingCollector": {"enabled": true, "target_google": "google.com", "interval": 10, "bin": "/sbin/ping"}
+        "PingCollector": {"enabled": true, "target_google": "google.com", "interval": 10, "bin": "/bin/ping"}
     },
     "collectors": [
         "Test",
@@ -19,6 +19,7 @@
     "prefix": "test.",
     "interval": 10,
     "defaultDimensions": {
-        "application": "fullerite"
+        "application": "fullerite",
+        "host": "dev33-devc"
     }
 }
