fixed how dimensions work

--- a/fullerite.conf
+++ b/fullerite.conf
@@ -10,7 +10,7 @@
     ],
     "handlers": {
         "Graphite": {
-            "server": "10.40.11.51"
+            "server": "10.40.11.51",
             "port": "2003"
         },
         "SignalFx": {
