do not require "enabled" in diamond colletor config

--- a/fullerite.conf.example
+++ b/fullerite.conf.example
@@ -8,8 +8,8 @@
 
     "diamond_collectors_path": "src/diamond/collectors",
     "diamond_collectors": {
-        "CPUCollector": {"enabled": true, "interval": 10},
-        "PingCollector": {"enabled": true, "target_google": "google.com", "interval": 10, "bin": "/bin/ping"}
+        "CPUCollector": {"interval": 10},
+        "PingCollector": {"target_google": "google.com", "interval": 10, "bin": "/sbin/ping"}
     },
 
     "collectors": {
