make fullerite_port configurable for diamond collectors

--- a/fullerite.conf.example
+++ b/fullerite.conf.example
@@ -5,6 +5,7 @@
         "application": "fullerite",
         "host": "dev33-devc"
     },
+    "fullerite_port": 19191,
 
     "diamond_collectors_path": "src/diamond/collectors",
     "diamond_collectors": {
