--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-bin/fullerite
-bin/vet
-bin/golint
-bin/gocyclo
-bin/beatit
+bin/*
+build/*
 pkg/*
 src/github.com/*
 src/golang.org/*
+*.deb
 *.secret
 *.pyc
