add fullerite collector to the example config

--- a/fullerite.conf.example
+++ b/fullerite.conf.example
@@ -21,6 +21,8 @@
         "Diamond":{
             "port": "19191",
             "interval": 10
+        },
+        "Fullerite":{
         }
     },
 
