diamond_collectors_path -> diamondCollectorsPath

--- a/fullerite.conf.example
+++ b/fullerite.conf.example
@@ -7,7 +7,7 @@
     },
     "fullerite_port": 19191,
 
-    "diamond_collectors_path": "src/diamond/collectors",
+    "diamondCollectorsPath": "src/diamond/collectors",
     "diamond_collectors": {
         "CPUCollector": {"interval": 10},
         "PingCollector": {"target_google": "google.com", "interval": 10, "bin": "/sbin/ping"}
