--- a/fullerite.conf.example
+++ b/fullerite.conf.example
@@ -40,7 +40,7 @@
             "interval": "10",
             "max_buffer_size": 300,
             "timeout": 2,
-            "handler_dimensions": {
+            "defaultDimensions": {
               "runtimeenv":"dev",
               "superregion": "norcal-dev",
               "region": "uswest1-dev",
