Get vagrant environment working again; add mutliple-collector example conf
The Vagrantfile was left behind after some changes to config/config.go. This
gets it working again, by:

* Updating to go 1.7.3
* Including pip in the dev environment, so diamond tests work
* Rejigged the /etc/fullerite.conf to reflect config.go changes
* added /etc/fullerite/conf.d as per ^^

So this now works:

    vagrant up
    vagrant ssh
    cd /vagrant
    make
    bin/fullerite

I was also investigating running multiple instances of the same type of
collector (with different config), which turns out is already implemented. So
i've also made the vagrant environment highlight this (via two instances of
TestCollector)

--- a/vagrant/fullerite.conf
+++ b/vagrant/fullerite.conf
@@ -6,14 +6,10 @@
         "host": "vagrant"
     },
     "fulleritePort": 19191,
-
-    "collectors": {
-        "Test": {
-            "metricName": "TestMetric",
-            "interval": 10
-        }
-    },
-
+    "diamondCollectorsPath": "/usr/share/fullerite/diamond/collectors",
+    "collectorsConfigPath": "/etc/fullerite/conf.d",
+    "diamondCollectors": [],
+    "collectors": ["Test Test1", "Test Test2"],
     "handlers": {
         "Log": {
             "interval": "10",
