--- a/src/fullerite/glide.yaml
+++ b/src/fullerite/glide.yaml
@@ -11,24 +11,29 @@ import:
 - package: github.com/fsouza/go-dockerclient
   version: 02a8beb401b20e112cff3ea740545960b667eab1
 - package: github.com/golang/protobuf
+  version: 98fa357170587e470c5f27d3c3ea0947b71eb455
   subpackages:
   - proto
-  version: 98fa357170587e470c5f27d3c3ea0947b71eb455
 - package: github.com/pkg/profile
   version: 7b053ad66e2a49baca9cc97b982dcea0e182bda4
 - package: github.com/prometheus/procfs
 - package: github.com/samuel/go-thrift
+  version: e9042807f4f5bf47563df6992d3ea0857313e2be
   subpackages:
   - examples/scribe
   - thrift
-  version: e9042807f4f5bf47563df6992d3ea0857313e2be
-- package: github.com/golang/lint/golint
+- package: github.com/golang/lint
   version: 8f348af5e29faa4262efdc14302797f23774e477
+  subpackages:
+  - golint
 - package: golang.org/x/tools
 - package: github.com/fzipp/gocyclo
-  varsion: 6acd4345c835499920e8426c7e4e8d7a34f1bb83
+- package: gopkg.in/yaml.v2
+- package: github.com/ghodss/yaml
+  version: ~1.0.0
 testImport:
 - package: github.com/stretchr/testify
   subpackages:
   - assert
   - require
+- package: github.com/MakeNowJust/heredoc
