Added MemcachedDetailed collector and tests, fixed MemcacheCollector test, added default index server to tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist = py27
 tox_pip_extensions_ext_pip_custom_platform = true
 tox_pip_extensions_ext_venv_update = true
 skipsdist = true
+indexserver =
+    default = https://pypi.yelpcorp.com/simple
 
 [testenv]
 deps = -rrequirements-dev.txt
