--- a/examples/config/fullerite.conf.example
+++ b/examples/config/fullerite.conf.example
@@ -80,8 +80,8 @@
         }
 	"Wavefront": {
             "apiKey": "secret_key",
-            "endpoint": "https://longboard.wavefront.com/report?f=graphite_v2",
-            "proxyServer": "internal-wavefront-elb-prod-194733904.us-west-2.elb.amazonaws.com"
+            "endpoint": "https://yelp.wavefront.com/report?f=graphite_v2",
+            "proxyServer": "dns-name.elb.amazonaws.com"
             "port": 2878
             "proxyFlag": "true"
             "interval": 5,
