--- a/src/fullerite/glide.yaml
+++ b/src/fullerite/glide.yaml
@@ -31,6 +31,10 @@ import:
 - package: gopkg.in/yaml.v2
 - package: github.com/ghodss/yaml
   version: ~1.0.0
+- package: k8s.io/api
+  version: kubernetes-1.16.3
+  subpackages:
+  - core/v1
 testImport:
 - package: github.com/stretchr/testify
   subpackages:
