--- a/src/fullerite/glide.yaml
+++ b/src/fullerite/glide.yaml
@@ -17,6 +17,8 @@ import:
 - package: github.com/pkg/profile
   version: 7b053ad66e2a49baca9cc97b982dcea0e182bda4
 - package: github.com/prometheus/procfs
+- package: github.com/prometheus/prometheus
+  version: 2.15.2
 - package: github.com/samuel/go-thrift
   version: 5165175b40afa0d250de9a330d47c1ea2051589f
   subpackages:
