--- a/src/fullerite/glide.yaml
+++ b/src/fullerite/glide.yaml
@@ -11,7 +11,7 @@ import:
 - package: github.com/fsouza/go-dockerclient
   version: b047305728a119e0df88f2d5e74c1e4530184990
 - package: github.com/golang/protobuf
-  version: 98fa357170587e470c5f27d3c3ea0947b71eb455
+  version: v1.3.1
   subpackages:
   - proto
 - package: github.com/pkg/profile
